fixed header so the search-box does not wrap the line in some browsers

--- a/src/static/less/uxebu.less
+++ b/src/static/less/uxebu.less
@@ -399,7 +399,7 @@ a.tag:hover, a.tag:focus, a.tag:visited,
 .nav .active .dropdown-arrow:after{display:none;}
 
 .dropdown {
-    position: absolute; top: 45px; right: 20px; width: 370px; z-index: 3; padding-top: 4px;
+    position: absolute; top: 44px; right: 20px; width: 370px; z-index: 3; padding-top: 4px;
     display: none;
 
     h4 {
@@ -552,9 +552,8 @@ a.tag:hover, a.tag:focus, a.tag:visited,
         width: 100px;
         color: #8F8B88;
         vertical-align: baseline;
-        .mrx;
-        .mlx;
         margin-top: 0px;
+        .mls;
     }
 }
 
